# Fresh-Start

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
cmake/: hybrid-crt.cmake  warnings.cmake
src/: Artifact.hpp  CMakeLists.txt  Version.hpp  Versions.hpp  app.exe.manifest  config.hpp.in  main.cpp  version.rc.in
src/artifacts/: BackupsFolder.cpp  BackupsFolder.hpp  BasicMSIArtifact.cpp  BasicMSIArtifact.hpp  DCSHooks.cpp  DCSHooks.hpp  FilesystemArtifact.cpp  FilesystemArtifact.hpp  HKCULayer.cpp  HKCULayer.hpp  HKLMLayer.cpp  HKLMLayer.hpp  LocalAppDataSettings.cpp  LocalAppDataSettings.hpp  LogsFolder.cpp  LogsFolder.hpp  MSIInstallation.cpp  MSIInstallation.hpp  MSIXInstallation.cpp  MSIXInstallation.hpp  MultipleMSIInstallations.cpp  MultipleMSIInstallations.hpp  ProgramData.cpp  ProgramData.hpp  SavedGamesSettings.cpp  SavedGamesSettings.hpp  TemporaryFilesFolder.cpp  TemporaryFilesFolder.hpp
